--- a/tests/test_channel_ordering/Makefile
+++ b/tests/test_channel_ordering/Makefile
@@ -21,6 +21,8 @@ COMMON_FLAGS = -O2 -g -DTEST_MODE
 XCC_FLAGS_FRONTEND_8BIT_4CH = $(COMMON_FLAGS) -DFRONTEND_8BIT_4CH -DTEST_MODE
 XCC_FLAGS_FRONTEND_8BIT_8CH = $(COMMON_FLAGS) -DFRONTEND_8BIT_8CH -DTEST_MODE
 XCC_FLAGS_BACKEND = $(COMMON_FLAGS) -DBACKEND
+XCC_FLAGS_FRONTEND_8BIT_4CH_CHANREORDER = $(COMMON_FLAGS) -DFRONTEND_8BIT_4CH -DTEST_MODE -DCHANNEL_REORDER_TEST
+XCC_FLAGS_FRONTEND_8BIT_8CH_CHANREORDER = $(COMMON_FLAGS) -DFRONTEND_8BIT_8CH -DTEST_MODE -DCHANNEL_REORDER_TEST
 
 # The XCORE_ARM_PROJECT variable, if set to 1, configures this
 # project to create both xCORE and ARM binaries.
