First commit of 4b tests - WIP

--- a/tests/test_pdm_interface/Makefile
+++ b/tests/test_pdm_interface/Makefile
@@ -18,8 +18,11 @@ USED_MODULES = lib_mic_array
 # xcc for the final link (mapping) stage.
 COMMON_FLAGS = -O2 -g -DTEST_MODE
 
-XCC_FLAGS_CH4 = $(COMMON_FLAGS) -DCHANNELS=4
-XCC_FLAGS_CH8 = $(COMMON_FLAGS) -DCHANNELS=8
+XCC_FLAGS_CH4_8B = $(COMMON_FLAGS) -DCHANNELS=4 -DPORT_WIDTH=8
+XCC_FLAGS_CH8_8B = $(COMMON_FLAGS) -DCHANNELS=8 -DPORT_WIDTH=8
+
+XCC_FLAGS_CH4_4B = $(COMMON_FLAGS) -DCHANNELS=4 -DPORT_WIDTH=4
+XCC_FLAGS_CH8_4B = $(COMMON_FLAGS) -DCHANNELS=8 -DPORT_WIDTH=4
 
 # The XCORE_ARM_PROJECT variable, if set to 1, configures this
 # project to create both xCORE and ARM binaries.
