Update 4b/4b pdm_rx and all chan orderign tests passing

--- a/tests/test_channel_ordering/Makefile
+++ b/tests/test_channel_ordering/Makefile
@@ -18,14 +18,13 @@ USED_MODULES = lib_mic_array
 # xcc for the final link (mapping) stage.
 COMMON_FLAGS = -O2 -g -DTEST_MODE
 
-#Defines to re-order channels. effectively does a bitrev on on 8bits
+#Defines to re-order channels. Effectively does a bitrev on 8bits
 CHAN_RE_ORDER_TEST_8B = -DMIC_ARRAY_CH0=PIN7 -DMIC_ARRAY_CH1=PIN6 -DMIC_ARRAY_CH2=PIN5 -DMIC_ARRAY_CH3=PIN4 \
 						-DMIC_ARRAY_CH4=PIN3 -DMIC_ARRAY_CH5=PIN2 -DMIC_ARRAY_CH6=PIN1 -DMIC_ARRAY_CH7=PIN0
 
-CHAN_RE_ORDER_TEST_4B8 = -DMIC_ARRAY_CH0_4BIT=PIN3_4A -DMIC_ARRAY_CH1_4BIT=PIN2_4A -DMIC_ARRAY_CH2_4BIT=PIN1_4A -DMIC_ARRAY_CH3_4BIT=PIN0_4A \
-					     -DMIC_ARRAY_CH4_4BIT=PIN3_4B -DMIC_ARRAY_CH5_4BIT=PIN2_4B -DMIC_ARRAY_CH6_4BIT=PIN1_4B -DMIC_ARRAY_CH7_4BIT=PIN0_4B
-
-CHAN_RE_ORDER_TEST_4B4 = -DMIC_ARRAY_CH0_4BIT=PIN3_4A -DMIC_ARRAY_CH1_4BIT=PIN2_4A -DMIC_ARRAY_CH2_4BIT=PIN1_4A -DMIC_ARRAY_CH3_4BIT=PIN0_4A
+#Defines to re-order channels. Effectively does a bitrev on each 4bit port
+CHAN_RE_ORDER_TEST_4B = -DMIC_ARRAY_CH0_4BIT=PIN3_4A -DMIC_ARRAY_CH1_4BIT=PIN2_4A -DMIC_ARRAY_CH2_4BIT=PIN1_4A -DMIC_ARRAY_CH3_4BIT=PIN0_4A \
+					    -DMIC_ARRAY_CH4_4BIT=PIN3_4B -DMIC_ARRAY_CH5_4BIT=PIN2_4B -DMIC_ARRAY_CH6_4BIT=PIN1_4B -DMIC_ARRAY_CH7_4BIT=PIN0_4B
 
 XCC_FLAGS_FRONTEND_8BIT_4CH = $(COMMON_FLAGS) -DFRONTEND_8BIT_4CH -DTEST_MODE
 XCC_FLAGS_FRONTEND_8BIT_8CH = $(COMMON_FLAGS) -DFRONTEND_8BIT_8CH -DTEST_MODE
@@ -34,8 +33,8 @@ XCC_FLAGS_FRONTEND_4BIT_8CH = $(COMMON_FLAGS) -DFRONTEND_4BIT_8CH -DTEST_MODE
 XCC_FLAGS_BACKEND = $(COMMON_FLAGS) -DBACKEND
 XCC_FLAGS_FRONTEND_8BIT_4CH_CHANREORDER = $(COMMON_FLAGS) -DFRONTEND_8BIT_4CH -DTEST_MODE $(CHAN_RE_ORDER_TEST_8B)
 XCC_FLAGS_FRONTEND_8BIT_8CH_CHANREORDER = $(COMMON_FLAGS) -DFRONTEND_8BIT_8CH -DTEST_MODE $(CHAN_RE_ORDER_TEST_8B)
-XCC_FLAGS_FRONTEND_4BIT_4CH_CHANREORDER = $(COMMON_FLAGS) -DFRONTEND_4BIT_4CH -DTEST_MODE $(CHAN_RE_ORDER_TEST_4B8)
-XCC_FLAGS_FRONTEND_4BIT_8CH_CHANREORDER = $(COMMON_FLAGS) -DFRONTEND_4BIT_8CH -DTEST_MODE $(CHAN_RE_ORDER_TEST_4B8)
+XCC_FLAGS_FRONTEND_4BIT_4CH_CHANREORDER = $(COMMON_FLAGS) -DFRONTEND_4BIT_4CH -DTEST_MODE $(CHAN_RE_ORDER_TEST_4B)
+XCC_FLAGS_FRONTEND_4BIT_8CH_CHANREORDER = $(COMMON_FLAGS) -DFRONTEND_4BIT_8CH -DTEST_MODE $(CHAN_RE_ORDER_TEST_4B)
 
 # The XCORE_ARM_PROJECT variable, if set to 1, configures this
 # project to create both xCORE and ARM binaries.
